--- a/Codes/plumer-web/package.json
+++ b/Codes/plumer-web/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "netlify-cli": "^22.1.3",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
