--- a/Codes/jobmate/netlify.toml
+++ b/Codes/jobmate/netlify.toml
@@ -9,5 +9,14 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
-# These redirects are handled by Next.js directly
-# Do not use the SPA redirect pattern for Next.js
+# Force trailing slashes
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# Handle 404s
+[[redirects]]
+  from = "/*"
+  to = "/404.html"
+  status = 404
