--- a/Codes/jobmate/package.json
+++ b/Codes/jobmate/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--max_old_space_size=4096' next dev -p 3000",
     "build": "next build",
+    "export": "next export",
     "start": "next start -p 3000",
     "lint": "next lint",
     "type-check": "tsc --noEmit -p tsconfig.json",
