--- a/Codes/jobmate/netlify.toml
+++ b/Codes/jobmate/netlify.toml
@@ -1,17 +1,12 @@
+# Netlify configuration for Next.js with custom deployment script
 [build]
-  command = "npm run build"
+  base = "/"
+  command = "chmod +x ./netlify-deploy.sh && ./netlify-deploy.sh"
   publish = "out"
-  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ./"
 
 [build.environment]
   NODE_VERSION = "18"
-  NEXT_TELEMETRY_DISABLED = "1"
 
-# Use the Next.js plugin for Netlify
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-  
-# Handle all routes for client-side routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
