--- a/Codes/jobmate/netlify.toml
+++ b/Codes/jobmate/netlify.toml
@@ -1,8 +1,8 @@
-# Netlify configuration with adaptive build script
+# Netlify configuration with explicit build script
 [build]
   base = "/"
-  command = "chmod +x ./build.sh && ./build.sh"
-  publish = "Codes/jobmate/out"
+  command = "chmod +x ./netlify-build.sh && ./netlify-build.sh"
+  publish = "out"
 
 [build.environment]
   NODE_VERSION = "18"
