--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
-# Netlify configuration with explicit build script
+# Netlify configuration for Next.js static export
 [build]
   base = "/"
-  command = "chmod +x ./netlify-build.sh && ./netlify-build.sh"
+  command = "npm install && npm run build"
   publish = "out"
 
 [build.environment]
