--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
+    "export": "next export",
+    "deploy": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
