--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "jobmate-root",
   "version": "1.0.0",
-  "description": "JobMate - AI-powered job marketplace application",
+  "description": "Root package for JobMate Netlify deployment",
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "NEXT_TELEMETRY_DISABLED=1 next build --no-lint",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "prisma generate && next build"
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
