--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-google-maps/api": "^2.20.7",
+    "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.35.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
@@ -72,6 +73,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
