--- a/package.json
+++ b/package.json
@@ -74,10 +74,12 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.4",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
