--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-google-maps/api": "^2.20.7",
     "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.35.0",
+    "algoliasearch": "^5.29.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -65,6 +66,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.0.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.18.1",
@@ -80,6 +82,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
+    "react-instantsearch": "^7.16.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
