--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+# .env*.local (temporarily allowing for development)
 .env
 
 # vercel
