--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-google-maps/api": "^2.20.7",
+    "@supabase/supabase-js": "^2.50.2",
     "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.35.0",
     "algoliasearch": "^5.29.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -71,7 +73,9 @@
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.18.1",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.522.0",
+    "nanoid": "^5.1.5",
     "next": "^14.2.30",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
