--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "dotenv": "^17.0.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.20.2",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.522.0",
@@ -82,11 +82,13 @@
     "postcss": "^8.5.6",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
+    "react-achievements": "^3.0.2",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.58.1",
     "react-hot-toast": "^2.5.2",
     "react-instantsearch": "^7.16.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
