--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
+# JobMate Environment Configuration
+# This file contains all environment variables needed for the JobMate application
+
 # Database connection
 DATABASE_URL="postgresql://postgres:password@localhost:5432/jobmate?schema=public"
 
 # Authentication
 JWT_SECRET="your-secret-key-here"
 JWT_EXPIRES_IN="7d"
+
+# Auth0 Configuration (if using Auth0)
+NEXT_PUBLIC_AUTH0_DOMAIN=your-auth0-domain.auth0.com
+NEXT_PUBLIC_AUTH0_CLIENT_ID=your-auth0-client-id
 
 # Google Maps
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
@@ -27,3 +34,13 @@ EMAIL_FROM="JobMate <noreply@jobmate.com>"
 
 # App URLs
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# Algolia API Keys (for search functionality)
+NEXT_PUBLIC_ALGOLIA_APP_ID=your_algolia_app_id
+NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY=your_algolia_search_api_key
+ALGOLIA_ADMIN_API_KEY=your_algolia_admin_api_key
+
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
