Update .gitignore to exclude environment files

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ yarn-error.log*
 # local env files
 # .env*.local (temporarily allowing for development)
 .env
+.env.production
+.env.local
 
 # vercel
 .vercel
