--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,51 @@
 # JobMate Environment Configuration
 # This file contains all environment variables needed for the JobMate application
+# Copy this file to .env and fill in your values
 
-# Database connection
+# Database connection (Prisma)
 DATABASE_URL="postgresql://postgres:password@localhost:5432/jobmate?schema=public"
 
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
 # Authentication
-JWT_SECRET="your-secret-key-here"
-JWT_EXPIRES_IN="7d"
-
-# Auth0 Configuration (if using Auth0)
-NEXT_PUBLIC_AUTH0_DOMAIN=your-auth0-domain.auth0.com
-NEXT_PUBLIC_AUTH0_CLIENT_ID=your-auth0-client-id
-
-# Google Maps
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="your-google-maps-api-key"
-
-# Stripe
-STRIPE_SECRET_KEY="your-stripe-secret-key"
-STRIPE_WEBHOOK_SECRET="your-stripe-webhook-secret"
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="your-stripe-publishable-key"
-
-# OpenAI (for AI features)
-OPENAI_API_KEY="your-openai-api-key"
-
-# Cloudinary (for image/video storage)
-CLOUDINARY_CLOUD_NAME="your-cloudinary-cloud-name"
-CLOUDINARY_API_KEY="your-cloudinary-api-key"
-CLOUDINARY_API_SECRET="your-cloudinary-api-secret"
-
-# Email service
-EMAIL_SERVER="smtp://user:password@smtp.example.com:587"
-EMAIL_FROM="JobMate <noreply@jobmate.com>"
+JWT_SECRET=your_jwt_secret_here
+NEXTAUTH_SECRET=your_nextauth_secret_here
+NEXTAUTH_URL=http://localhost:3000
+JWT_EXPIRES_IN=7d
 
 # App URLs
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Stripe (for payments)
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+
+# OpenAI (for AI features)
+OPENAI_API_KEY=your_openai_api_key
+
+# Cloudinary (for image/video storage)
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
+
+# Email service
+EMAIL_SERVER_HOST=smtp.example.com
+EMAIL_SERVER_PORT=587
+EMAIL_SERVER_USER=your_email_user
+EMAIL_SERVER_PASSWORD=your_email_password
+EMAIL_FROM=no-reply@example.com
+
+# Storage (using Supabase)
+STORAGE_BUCKET=jobmate-storage
 
 # Algolia API Keys (for search functionality)
 NEXT_PUBLIC_ALGOLIA_APP_ID=your_algolia_app_id
 NEXT_PUBLIC_ALGOLIA_SEARCH_API_KEY=your_algolia_search_api_key
 ALGOLIA_ADMIN_API_KEY=your_algolia_admin_api_key
 
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# Google Maps
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key
