--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-toastify": "^9.1.3",
     "recharts": "^2.15.4",
     "sonner": "^2.0.5",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^3.4.1",
